# caffe-static

./: .gitignore  LICENSE  README.md
depends/: readme.txt
depends/patch/caffe-ssd/: CMakeLists.txt
depends/patch/caffe-ssd/cmake/Modules/: FindGFlags.cmake  FindLevelDB.cmake  FindOpenBLAS.cmake  FindSnappy.cmake
patch/OpenBLAS-0.2.18/: Makefile.install  Makefile.system
patch/OpenBLAS-0.2.18/driver/others/: memory.c  xerbla.c
patch/OpenBLAS-0.2.20/: Makefile.install
patch/blvc_caffe_windows/src/caffe/util/: db_lmdb.cpp
patch/caffe-ssd/cmake/Modules/: FindGFlags.cmake  FindGlog.cmake  FindLMDB.cmake
patch/caffe_base/cmake/: ProtoBuf.cmake
patch/caffe_base/cmake/Modules/: FindGFlags.cmake  FindGlog.cmake  FindLevelDB.cmake  FindOpenBLAS.cmake
patch/caffe_base/src/caffe/util/: signal_handler.cpp
patch/caffe_windows/: CMakeLists.txt
patch/caffe_windows/cmake/: Dependencies.cmake
patch/glog-0.3.5/src/: logging.cc
patch/glog-0.3.5/src/base/: mutex.h
patch/leveldb-master/: CMakeLists.txt
patch/leveldb-master/port/: port_win.h
patch/lmdb-0.9.21/: CMakeLists.txt  unistd.h
